# neebapnaebap

./: .env.example  .gitignore  README.md  docker-compose.yml
docs/: architecture.md  prd.md
neebapnaebap-be/: pyproject.toml
neebapnaebap-be/app/api/v1/: images.py
neebapnaebap-be/app/core/: config.py
neebapnaebap-be/app/domain/: battles.py  images.py
neebapnaebap-be/app/models/: core.py
neebapnaebap-be/app/schemas/: core.py
neebapnaebap-be/app/services/: storage.py
neebapnaebap-be/tests/: test_battle_domain.py
neebapnaebap-mobile/: App.tsx  package-lock.json  package.json
neebapnaebap-mobile/src/features/battles/: BattleCategoryChips.tsx
neebapnaebap-web/: package-lock.json  package.json
neebapnaebap-web/src/: main.tsx  styles.css
neepicknaepick-be/: pyproject.toml
neepicknaepick-be/app/: main.py
neepicknaepick-be/app/api/v1/: battles.py
neepicknaepick-be/app/core/: config.py
neepicknaepick-be/app/domain/: battles.py  images.py
neepicknaepick-be/app/models/: __init__.py  core.py
neepicknaepick-be/app/schemas/: core.py
neepicknaepick-be/tests/: test_battle_domain.py
neepicknaepick-mobile/: App.tsx  package-lock.json  package.json  tsconfig.json
neepicknaepick-mobile/src/api/: client.ts
neepicknaepick-mobile/src/features/battles/: BattleCategoryChips.tsx
neepicknaepick-mobile/src/features/camera/: cameraPlan.ts
neepicknaepick-web/: package-lock.json  package.json
neepicknaepick-web/src/: main.tsx  styles.css
